force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/SFSSDupeCatcher__Potential_Duplicate__c.object-meta.xml
<CustomObject>
    <label>DupeCatcher Potential Duplicate</label>
    <nameField>
        <displayFormat>Dupe-{0}</displayFormat>
        <label>Duplicate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeCatcher Potential Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>