force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Account__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account record associated with this potential duplicate record.</description>
    <inlineHelpText>The Account record associated with this potential duplicate record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
    <relationshipName>Potential_Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>