force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Contact__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact record associated with this potential duplicate record.</description>
    <inlineHelpText>The Contact record associated with this potential duplicate record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
    <relationshipName>Potential_Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>