force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Contact_Display__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Contact_Display__c</fullName>
    <description>A link to the Contact record associated with this potential duplicate record.</description>
    <formula>HYPERLINK( &#39;/&#39; &amp; SFSSDupeCatcher__Contact__c, SFSSDupeCatcher__Contact__r.FirstName &amp; IF(SFSSDupeCatcher__Contact__r.FirstName &lt;&gt; &#39;&#39;, &#39; &#39;, &#39;&#39; ) &amp; SFSSDupeCatcher__Contact__r.LastName, &#39;_self&#39;) &amp; IF( AND( SFSSDupeCatcher__Contact__r.AccountId &lt;&gt; &#39;&#39;, NOT( ISNULL( SFSSDupeCatcher__Contact__r.AccountId ) ) ), &#39; at &#39; &amp; HYPERLINK( &#39;/&#39; &amp; SFSSDupeCatcher__Contact__r.AccountId, SFSSDupeCatcher__Contact__r.Account.Name, &#39;_self&#39; ), &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A link to the Contact record associated with this potential duplicate record.</inlineHelpText>
    <label>Contact Record</label>
    <type>Text</type>
</CustomField>