force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Criteria__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Criteria__c</fullName>
    <defaultValue>&quot;null&quot;</defaultValue>
    <description>Values used to match potential duplicates</description>
    <label>Criteria</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>