force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Duplicate_Warning__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Duplicate_Warning__c</fullName>
    <description>A link to the Duplicate Alert record that is the parent of this record</description>
    <inlineHelpText>A link to the Duplicate Alert record that is the parent of this record</inlineHelpText>
    <label>Duplicate Alert</label>
    <referenceTo>SFSSDupeCatcher__Duplicate_Warning__c</referenceTo>
    <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
    <relationshipName>Potential_Duplicates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>