force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Email__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Email__c</fullName>
    <description>The email address of the duplicate lead/contact/account.</description>
    <formula>CASE( SFSSDupeCatcher__Object_Type__c, &#39;Contact&#39;, SFSSDupeCatcher__Contact__r.Email, &#39;Lead&#39;, SFSSDupeCatcher__Lead__r.Email, &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The email address of the duplicate lead/contact/account.</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>