force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Lead__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead record associated with this potential duplicate record.</description>
    <inlineHelpText>The Lead record associated with this potential duplicate record.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
    <relationshipName>Potential_Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>