force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Lead_Display__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Lead_Display__c</fullName>
    <description>The Lead record associated with this potential duplicate record.</description>
    <formula>HYPERLINK( &#39;/&#39; &amp; SFSSDupeCatcher__Lead__c, SFSSDupeCatcher__Lead__r.FirstName &amp; IF(SFSSDupeCatcher__Lead__r.FirstName &lt;&gt; &#39;&#39;, &#39; &#39;, &#39;&#39; ) &amp; SFSSDupeCatcher__Lead__r.LastName &amp; IF( SFSSDupeCatcher__Lead__r.Company &lt;&gt; &#39;&#39;, &#39; at &#39; &amp; SFSSDupeCatcher__Lead__r.Company, &#39;&#39; ), &#39;_self&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Lead record associated with this potential duplicate record.</inlineHelpText>
    <label>Lead Record</label>
    <type>Text</type>
</CustomField>