force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Object_Type__c</fullName>
    <description>Indicator as to whether the duplicate was lead, contact or account.</description>
    <formula>IF( AND( NOT( ISNULL( SFSSDupeCatcher__Account__c ) ), SFSSDupeCatcher__Account__c &lt;&gt; &#39;&#39; ), &#39;Account&#39;, IF( AND( NOT( ISNULL( SFSSDupeCatcher__Contact__c ) ), SFSSDupeCatcher__Contact__c &lt;&gt; &#39;&#39; ), &#39;Contact&#39;, IF( AND( NOT( ISNULL( SFSSDupeCatcher__Lead__c ) ), SFSSDupeCatcher__Lead__c &lt;&gt; &#39;&#39; ), &#39;Lead&#39;, &#39;&#39; ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator as to whether the duplicate is a lead, contact or account.</inlineHelpText>
    <label>Duplicate Type</label>
    <type>Text</type>
</CustomField>