force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Phone__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Phone__c</fullName>
    <description>The phone number of the duplicate lead/contact/account.</description>
    <formula>CASE( SFSSDupeCatcher__Object_Type__c, &#39;Account&#39;, SFSSDupeCatcher__Account__r.Phone, &#39;Contact&#39;, SFSSDupeCatcher__Contact__r.Phone, &#39;Lead&#39;, SFSSDupeCatcher__Lead__r.Phone, &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The phone number of the duplicate lead/contact/account.</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>