force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Scenario__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario__c</fullName>
    <description>A link to the parent filter that triggered the potential duplicate.</description>
    <inlineHelpText>A link to the parent filter that triggered the potential duplicate.</inlineHelpText>
    <label>Filter</label>
    <referenceTo>SFSSDupeCatcher__Scenario__c</referenceTo>
    <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
    <relationshipName>Potential_Duplicates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>