force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario_Type__c</fullName>
    <description>The type of records triggered the potential duplicate (e.g. Lead, Account, Lead to Contact, etc.) .   

This value always matches the Filter Type of the parent filter.</description>
    <inlineHelpText>The type of records triggered the potential duplicate (e.g. Lead, Account, Lead to Contact, etc.) .   

This value always matches the Filter Type of the parent filter.</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>