force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Warning_Display__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Warning_Display__c</fullName>
    <description>A link to the duplicate contact/account/lead record associated with this potential duplicate record.</description>
    <formula>CASE( SFSSDupeCatcher__Object_Type__c, &#39;Account&#39;, HYPERLINK( &#39;/&#39; &amp; SFSSDupeCatcher__Account__c, IF( SFSSDupeCatcher__Duplicate_Warning__r.SFSSDupeCatcher__Scenario__r.SFSSDupeCatcher__Person_Account_Filter__c, SFSSDupeCatcher__Account__r.Id, SFSSDupeCatcher__Account__r.Name), &#39;_self&#39; ), &#39;Contact&#39;, SFSSDupeCatcher__Contact_Display__c , &#39;Lead&#39;, SFSSDupeCatcher__Lead_Display__c, &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A link to the duplicate contact/account/lead record associated with this potential duplicate record.</inlineHelpText>
    <label>Duplicate Record</label>
    <type>Text</type>
</CustomField>